--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,34 +1,16 @@
-<div class="row">
-  <div class="col-sm-8 col-sm-offset-2">
-    <form #f="ngForm" (ngSubmit)="onSubmit()">
-      <div class="form-group {{appareilName.errors && (appareilName.dirty || appareilName.touched) ? 'has-error' :''}}">
-        <label for="name">
-          Nom de l'appareil
-        </label>
-        <input type="text" id="name" class="form-control"
-               [(ngModel)]="appareil.name" #appareilName="ngModel" name="appareilName" required>
-        <label *ngIf="appareilName.errors && (appareilName.dirty || appareilName.touched)"
-               class="validation-error-label">Ce champs
-          est
-          obligatoire.</label>
-      </div>
-      <div
-        class="form-group {{appareilStatus.errors && (appareilStatus.dirty || appareilStatus.touched) ? 'has-error' :''}}">
-        <label for="status">
-          État de l'appareil
-        </label>
-        <select id="status" class="form-control"
-                #appareilStatus="ngModel" [(ngModel)]="appareil.status" name="appareilStatus" required>
-          <option value="1">Allumé</option>
-          <option value="0">Éteint</option>
-        </select>
+<div class="container">
+  <div class="row">
+    <div class="col-xs-12">
+      <h2>Mes appareils</h2>
 
-        <label *ngIf="appareilStatus.errors && (appareilStatus.dirty || appareilStatus.touched)"
-               class="validation-error-label">Ce champs
-          est
-          obligatoire.</label>
-      </div>
-      <button class="btn btn-primary" [disabled]="f.invalid">Enregistrer</button>
-    </form>
+      <p>Mis à jour : {{lastUpdate  |  date : 'short' | lowercase }}</p>
+
+      <ul class="list-group">
+        <app-appareil *ngFor="let appareil of appareils"
+                      [appareilName]="appareil.name" [appareilStatus]="appareil.status"></app-appareil>
+      </ul>
+
+      <button class="btn btn-success" [disabled]="!isAuth" (click)="onAllumer()">Tout allumer</button>
+    </div>
   </div>
 </div>
