--- a/src/app/appareil/appareil.component.html
+++ b/src/app/appareil/appareil.component.html
@@ -15,4 +15,9 @@
     '        allumer' : 'etteindre' }}
 
   </button>
+
+
+  <button class="btn btn-primary"
+          [routerLink]="['/appareil/'+id]">
+    Détail</button>
 </li>
