--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,22 +1,15 @@
+<nav class="navbar navbar-default">
+  <div class="container-fluid">
+    <div class="navbar-collapse">
+      <ul class="nav navbar-nav">
+        <li routerLinkActive="active"><a routerLink="auth">Authentification</a></li>
+        <li routerLinkActive="active"><a routerLink="appareils">Appareils</a></li>
+      </ul>
+    </div>
+  </div>
+</nav>
 <div class="container">
   <div class="row">
-    <div class="col-xs-12">
-      <h2>Mes appareils</h2>
-
-      <p>Mis à jour : {{lastUpdate  |  date : 'short' | lowercase }}</p>
-
-      <ul class="list-group">
-        <app-appareil *ngFor="let appareil of appareils"
-                      [appareilName]="appareil.name" [appareilStatus]="appareil.status"
-                      [id]="appareil.id"></app-appareil>
-      </ul>
-
-      <button class="btn" [ngClass]="{'btn-success' : switch , 'btn-danger' : !switch}" [disabled]="!isAuth"
-              (click)="onSwitch()">
-        {{ switch ? 'Tout\n' +
-        '        allumer' : 'Tout etteindre' }}
-
-      </button>
-    </div>
+    <router-outlet></router-outlet>
   </div>
 </div>
