--- a/src/app/appareil-view/appareil-view.component.html
+++ b/src/app/appareil-view/appareil-view.component.html
@@ -15,4 +15,6 @@
     '        allumer' : 'Tout etteindre' }}
 
   </button>
+
+  <button class="btn" [routerLink]="['/appareil/add']">Ajouter un appareil</button>
 </div>
