--- a/src/app/appareil-form/appareil-form.component.html
+++ b/src/app/appareil-form/appareil-form.component.html
@@ -1,39 +1,32 @@
 <div class="row">
   <div class="col-sm-8 col-sm-offset-2">
     <form #f="ngForm" (ngSubmit)="onSubmit()">
-
-      <div class="form-group
-{{appareilName.errors && appareilName.touched ? 'has-error' : ''}}">
+      <div class="form-group {{appareilName.errors && (appareilName.dirty || appareilName.touched) ? 'has-error' :''}}">
         <label for="name">
           Nom de l'appareil
         </label>
-        <input type="text"
-               [(ngModel)]="appareil.name"
-               id="name" name="appareilName"
-               #appareilName="ngModel"
-               class="form-control"
-               required>
-
-        <label *ngIf="appareilName.errors &&
-        (appareilName.touched)" class="validation-error-label">
-          Ce champs est obligatoire
-        </label>
+        <input type="text" id="name" class="form-control"
+               [(ngModel)]="appareil.name" #appareilName="ngModel" name="appareilName" required>
+        <label *ngIf="appareilName.errors && (appareilName.dirty || appareilName.touched)"
+               class="validation-error-label">Ce champs
+          est
+          obligatoire.</label>
       </div>
-      <div class="form-group">
+      <div
+        class="form-group {{appareilStatus.errors && (appareilStatus.dirty || appareilStatus.touched) ? 'has-error' :''}}">
         <label for="status">
           État de l'appareil
         </label>
-        <select id="status" name="appareilStatus"
-                [(ngModel)]="appareil.status"
-                class="form-control"
-                required>
+        <select id="status" class="form-control"
+                #appareilStatus="ngModel" [(ngModel)]="appareil.status" name="appareilStatus" required>
           <option value="1">Allumé</option>
           <option value="0">Éteint</option>
         </select>
 
-        <label class="validation-error-label">
-          Ce champs est obligatoire
-        </label>
+        <label *ngIf="appareilStatus.errors && (appareilStatus.dirty || appareilStatus.touched)"
+               class="validation-error-label">Ce champs
+          est
+          obligatoire.</label>
       </div>
       <button class="btn btn-primary" [disabled]="f.invalid">Enregistrer</button>
     </form>
