--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,25 +1,25 @@
-<!--The content below is only a placeholder and can be replaced.-->
 
+<!-- Menu -->
 
-<div class="container">
-  <div class="row">
-    <div class="col-xs-12 ">
-      <h2>Mes appareils</h2>
+<nav class="navbar navbar-default">
+    <div class="container-fluid">
+      <div class="navbar-collapse">
+        <ul class="nav navbar-nav">
+          <li routerLinkActive="active"><a routerLink="auth">Authentification</a></li>
+          <li routerLinkActive="active"><a routerLink="appareils">Appareils</a></li>
+        </ul>
+      </div>
+    </div>
+</nav>
 
-<p>Mis a jour : {{lastUpdate | date : 'EEEE d MMMM y' | uppercase}}</p>
+<!-- Fin Menu -->
 
-      <ul class="list-group">
-        <app-appareil *ngFor="let appareil of appareils"
-         [appareilName]="appareil.name" 
-         [AppareilStatus]="appareil.status">
-        </app-appareil>
+    <div class="container">
 
-      </ul>
+      <div class="row">
+         
+        <router-outlet></router-outlet>
+
+      </div>
       
     </div>
-    <div class="col-xs-12">
-      <button class="btn btn-success" [disabled]="!isAuth" (click)="onSwitch()">{{btnmsg}}</button>
-    </div>
-  </div>
-  
-</div>
