--- a/src/app/appareil/appareil.component.html
+++ b/src/app/appareil/appareil.component.html
@@ -1,6 +1,24 @@
 <li style="margin-bottom: 9px" [ngClass]="{'list-group-item-success' : AppareilStatus , 'list-group-item-danger' : !AppareilStatus}" class="list-group-item">
-    <div style="width:20px;height:20px;background-color:red;"
-    *ngIf="AppareilStatus === false"></div>
+    
+
+
+
   <h4 [ngStyle]="{color : getColor()}" >Appareil : {{appareilName}}  --- Status : {{AppareilStatus ? 'Allumé' : 'éteint'}}</h4>
   <input type="text" class="form-control " [(ngModel)]="appareilName">
+  
+  <div class="row" style="margin-top : 5px;">
+
+  <div class="col-sm-2">
+  <button class="btn" [ngClass]="{'btn-success' : !AppareilStatus , 'btn-danger' : AppareilStatus}"
+  (click)="onSwitch()">
+{{ !AppareilStatus ? '\n' +
+'        allumer' : 'etteindre' }}</button>
+</div>
+  <button class="btn btn-primary"
+          [routerLink]="['/appareil/'+id]">
+    Détail</button>
+    <button class="btn btn-danger"
+          (click)="delete()">
+    Delete</button>
+  </div>
 </li>
