--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -15,7 +15,10 @@
 <!-- Fin Menu -->
 
     <div class="container">
+      <div class="row">
+<h5> {{email}} </h5>
 
+      </div>
       <div class="row">
          
         <router-outlet></router-outlet>
