--- a/src/app/appareil-view/appareil-view.component.html
+++ b/src/app/appareil-view/appareil-view.component.html
@@ -1,4 +1,5 @@
 <div class="col-xs-12 ">
+  <h3 class="text-success">{{user.email}}</h3>
   <h2>Mes appareils</h2>
 
 <p>Mis a jour : {{lastUpdate | date : 'EEEE d MMMM y' | uppercase}}</p>
