--- a/src/app/auth/auth.component.html
+++ b/src/app/auth/auth.component.html
@@ -1,19 +1,20 @@
 <h2>Authentification</h2>
 <form class="container-fluid">
-<div class="row">
+  <div class="row">
 
     <div class="col-md-6 ">
-        <input name="email"  type="email" [(ngModel)]="user.email" class="form-control" placeholder="Your Email *" value="" />
+      <input name="email" type="email" [(ngModel)]="user.email" class="form-control" placeholder="Your Email *"
+             value=""/>
     </div>
-</div>
-<div class="row">
+  </div>
+  <div class="row">
     <div class="col-md-6 ">
-        <input name="pw" type="password" [(ngModel)]="user.password" class=" form-control" placeholder="Your Password *" value="" />
+      <input name="pw" type="password" [(ngModel)]="user.password" class=" form-control" placeholder="Your Password *"
+             value=""/>
     </div>
-</div>
-    
+  </div>
+
 </form>
 <button class="btn btn-success" *ngIf="!authStatus" (click)="onSignIn()">Se connecter</button>
 <button class="btn btn-danger" *ngIf="authStatus" (click)="onSignOut()">Se déconnecter</button>
 <button class="btn btn-primary" *ngIf="!authStatus" (click)="onSignUp()">S'enregistrer</button>
-            
